Fix Share button vertical alignment on home page detail cards

--- a/theme/home.less
+++ b/theme/home.less
@@ -482,7 +482,7 @@
             flex: 0 0 auto;
         }
         .description-container {
-            flex: 1 1 auto;
+            flex: 0 1 auto;
             min-height: 0;
             width: 100%;
             max-height: 8rem;
